truncate lines on mobile phones only for list items, fix svg w/h in IE, search input IE fix

--- a/source/css/scss/custom/_GM3-Global-Search.scss
+++ b/source/css/scss/custom/_GM3-Global-Search.scss
@@ -28,7 +28,9 @@
 
 .search-module .close-btn svg {
   width: 1.25;
-  height: 1.375rem
+  height: 1.375rem;
+  position: absolute;
+  cursor:pointer;
 }
 
 .search-module .close-btn:hover {
